updated category links on mobile

--- a/app/category-all.html
+++ b/app/category-all.html
@@ -69,9 +69,10 @@
         <div class="category-content">
           <div class="container-fluid">
             <div class="row tabs">
-                <h2 class="col-xs-6 tab active"><a href="#">Explore Solutions</a></h2>
+                <h2 class="col-xs-6 tab active"><a href="#">Ideas &amp; Insights</a></h2>
                 <h2 class="col-xs-6 tab"><a href="#">Find Products</a></h2>
             </div><!--/.row-->
+            <div class="row tabs-placehold"></div>
           </div><!--/.container-fluid-->
           <div class="tab-pane-content" id="explore-ideas">
 
@@ -91,7 +92,7 @@
                   </div><!--/.table-->
                 </div></a><!--/.col-xs-12.col-sm-->
                 <div class="col-xs-12 cat-techlinks">
-                  <p>Technology Used: <a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#">. . .</a></p>
+                  <p><span class="link-title">Technology Used:</span> <a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#" class="read-more">. . .</a></p>
                 </div><!--/.cat-techlinks-->
                 <a href="#"><div class="col-sm-6 bg col-xs-12 vert">
                   <div class="table">
@@ -100,7 +101,7 @@
                         <span class="quote-cite">
                         <strong>Andrew Bury,</strong><br>
                         Network Planning Manager,<br>
-                        Peugeot Citroen Automobiles, UK Ltd
+                        <span class="hidden-xs">Peugeot Citroen Automobiles, UK Ltd</span>
                         </span>
                       </blockquote>
                     </div><!--/.vertical-wrap-->
@@ -128,7 +129,7 @@
                   </div><!--/.vertical-wrap-->
                 </div></a><!--/.table-->
                 <div class="col-xs-12 cat-techlinks">
-                  <p class="">Technology Used: <a href="#">Doc1<sup>&reg;</sup> document creation</a> <a href="#">e-Messaging Solution</a> <a href="#">Document Dialog</a></p>
+                  <p class=""><span class="link-title">Technology Used:</span> <a href="#">Doc1<sup>&reg;</sup> document creation</a> <a href="#">e-Messaging Solution</a> <a href="#">Document Dialog</a></p>
                 </div><!--/.cat-techlinks-->
               </div><!--/.module-->
             </div><!--/.row-->
@@ -162,7 +163,7 @@
                 <a href="#"><div class="table">
                   <div class="vertical-wrap">
                     <div class="col2-content">
-                      <h3 class="big">4 Why Relationships are the Next Big Thing in Big Data</h3>
+                      <h3 class="big">Relationships are the Next Big Thing in Big Data</h3>
                       <p class="small"><i>by Navin Sharma | August 14, 2014</i></p>
                       <p class="hidden-xs">Thanks to digitization and Big Data, unorganized and impossible-to-search-through manila folders and filing...</p>
                     </div>
@@ -188,7 +189,7 @@
                   </div><!--/.table-->
                 </div></a><!--/.col-xs-12.col-sm-->
                 <div class="col-xs-12 cat-techlinks">
-                  <p>Technology Used: <a href="#">MapInfo Professional 12.5</a> <span class="blue-box"><a href="#">Download Free Trial</a></span> <a href="#">. . .</a></p>
+                  <p><span class="link-title">Technology Used:</span> <a href="#">MapInfo Professional 12.5</a> <span class="blue-box"><a href="#">Download Free Trial</a></span> <a href="#" class="read-more">. . .</a></p>
                 </div><!--/.cat-techlinks-->
                 <a href="#"><div class="col-sm-6 bg col-xs-12 vert">
                   <div class="table">
@@ -218,12 +219,12 @@
                   <div class="vertical-wrap">
                     <img src="images/sprite/icn-play-circle.png" class="video-play" />
                     <div class="col-sm-8 col-xs-11">
-                      <p class="hidden-xs"><i>8 Bank J. Van Breda</i> gets digital messaging, goes paperless and implements electronic signatures</p>
+                      <p><i>8 Bank J. Van Breda</i> gets digital messaging, goes paperless and implements electronic signatures</p>
                     </div>
                   </div><!--/.vertical-wrap-->
                 </div></a><!--/.table-->
                 <div class="col-xs-12 cat-techlinks">
-                  <p class="">Technology Used: <a href="#">Doc1<sup>&reg;</sup> document creation</a> <a href="#">e-Messaging Solution</a> <a href="#">Document Dialog</a></p>
+                  <p class=""><span class="link-title">Technology Used:</span> <a href="#">Doc1<sup>&reg;</sup> document creation</a> <a href="#">e-Messaging Solution</a> <a href="#">Document Dialog</a></p>
                 </div><!--/.cat-techlinks-->
               </div><!--/.module-->
             </div><!--/.row-->
@@ -245,7 +246,7 @@
                   </div><!--/.table-->
                 </div></a><!--/.col-xs-12.col-sm-->
                 <div class="col-xs-12 cat-techlinks">
-                  <p>Technology Used: <a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#">. . .</a></p>
+                  <p><span class="link-title">Technology Used:</span> <a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#" class="read-more">. . .</a></p>
                 </div><!--/.cat-techlinks-->
                 <a href="#"><div class="col-sm-6 bg col-xs-12 vert">
                   <div class="table">
@@ -277,7 +278,7 @@
                   </div><!--/.table
                 </div></a><!--/.col-xs-12.col-sm
                 <div class="col-xs-12 cat-techlinks">
-                  <p>Technology Used: <a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#">. . .</a></p>
+                  <p><span class="link-title">Technology Used:</span> <a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#" class="read-more">. . .</a></p>
                 </div><!--/.cat-techlinks
                 <a href="#"><div class="col-sm-6 bg col-xs-12 vert mobil-video-image-example">
                   <img class="video-bg-img visible-xs" src="images/category-template/desktop/col2-bg-fullwidth4.jpg" />
@@ -309,7 +310,7 @@
                     </div><!--/.vertical-wrap-->
                   </div></a><!--/.table-->
                   <div class="col-xs-12 cat-techlinks">
-                    <p>Technology Used: <a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#">. . .</a></p>
+                    <p><span class="link-title">Technology Used:</span> <a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#" class="read-more">. . .</a></p>
                   </div><!--/.cat-techlinks-->
                 </div><!--/.module.col2-->
                 <a href="#"><div class="module col2 right darkbg bgexample2">
@@ -382,7 +383,7 @@
                       </div><!--/.vertical-wrap-->
                     </div></a><!--/.table-->
                     <div class="col-xs-12 cat-techlinks">
-                      <p class="">Technology Used: <a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#">. . .</a></p>
+                      <p class=""><span class="link-title">Technology Used:</span> <a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#" class="read-more">. . .</a></p>
                     </div><!--/.cat-techlinks-->
                 </div><!--/.module.col2-->
 
