--- a/app/content/category-content.html
+++ b/app/content/category-content.html
@@ -16,6 +16,7 @@
           <h2 class="col-xs-6 tab active"><a href="#">Ideas &amp; Insights</a></h2>
           <h2 class="col-xs-6 tab"><a href="#">Find Products</a></h2>
       </div><!--/.row-->
+      <div class="row tabs-placehold"></div>
     </div><!--/.container-fluid-->
     <div class="tab-pane-content" id="explore-ideas">
 
