category page mobile modules

--- a/app/category-all.html
+++ b/app/category-all.html
@@ -313,7 +313,7 @@
                     <p><span class="link-title">Technology Used:</span> <a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#" class="read-more">. . .</a></p>
                   </div><!--/.cat-techlinks-->
                 </div><!--/.module.col2-->
-                <a href="#"><div class="module col2 right darkbg bgexample2">
+                <a href="#"><div class="module col2 darkbg right bgexample2">
                     <div class="col2-content pos bottom left">
                       <h3><i>10 MapInfo Professional 12.5</i></h3>
                       <p class="small">The power to visualize and analyze geographical information</p>
