--- a/app/category-all.html
+++ b/app/category-all.html
@@ -530,7 +530,7 @@
         </div><!--/.search-overlay-->
 
 
-        <!-- build:js scripts/vendor-category.js -->
+        <!-- build:js scripts/vendor-category2.js -->
         <script src="scripts/vendors/jquery/jquery-1.11.1.min.js"></script>
         <script src="scripts/vendors/jquery/jquery-ui.min.js"></script>
         <script src="scripts/vendors/modernizr.prod.min.js"></script>
@@ -539,9 +539,9 @@
         <!-- endbuild -->
 
 
-        <!-- build:js({app,.tmp}) scripts/main-category.js -->
+        <!-- build:js({app,.tmp}) scripts/main-category2.js -->
         <script src="scripts/pb.namespace.js"></script>
-        <script src="scripts/pb.main-category.js"></script>
+        <script src="scripts/pb.maincategory.js"></script>
         <script src="scripts/pb.model.js"></script>
         <script src="scripts/pb.menu.js"></script>
         <script src="scripts/pb.header.js"></script>
