--- a/app/content/story-1-content.html
+++ b/app/content/story-1-content.html
@@ -40,8 +40,8 @@
           <div class="row">
             <div class="logo col-xs-6">
               <a href="index.html">
-                <img src="images/pitneybowes-logo.png" alt="pitney bowes logo" class="hidden-xs"/>
-                <img src="images/sprite-mobile/pitneybowes-logo2x.png" alt="pitney bowes logo" class="visible-xs logo-mobile"/>
+                <img src="../images/pitneybowes-logo.png" alt="pitney bowes logo" class="hidden-xs"/>
+                <img src="../images/sprite-mobile/pitneybowes-logo2x.png" alt="pitney bowes logo" class="visible-xs logo-mobile"/>
               </a>
             </div>
             <nav class="col-xs-6">
@@ -94,6 +94,7 @@
 
 
 <!-- build:js({app,.tmp}) scripts/main-category.js -->
+<script src="../scripts/pb.namespace.js"></script>
 <script src="../scripts/pb.main.js"></script>
 <script src="../scripts/pb.model.js"></script>
 <script src="../scripts/pb.menu.js"></script>
