updates to grunt file and category page styles

--- a/app/category-all.html
+++ b/app/category-all.html
@@ -92,7 +92,7 @@
                   </div><!--/.table-->
                 </div></a><!--/.col-xs-12.col-sm-->
                 <div class="col-xs-12 cat-techlinks">
-                  <p><span class="link-title">Technology Used:</span> <a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#" class="read-more">. . .</a></p>
+                  <span class="link-title">Technology Used:</span> <div class="links"><a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#" class="read-more">. . .</a></div>
                 </div><!--/.cat-techlinks-->
                 <a href="#"><div class="col-sm-6 bg col-xs-12 vert">
                   <div class="table">
@@ -129,7 +129,7 @@
                   </div><!--/.vertical-wrap-->
                 </div></a><!--/.table-->
                 <div class="col-xs-12 cat-techlinks">
-                  <p class=""><span class="link-title">Technology Used:</span> <a href="#">Doc1<sup>&reg;</sup> document creation</a> <a href="#">e-Messaging Solution</a> <a href="#">Document Dialog</a></p>
+                  <span class="link-title">Technology Used:</span> <div class="links"><a href="#">Doc1<sup>&reg;</sup> document creation</a> <a href="#">e-Messaging Solution</a> <a href="#">Document Dialog</a></div>
                 </div><!--/.cat-techlinks-->
               </div><!--/.module-->
             </div><!--/.row-->
@@ -188,8 +188,8 @@
                     </div><!--/.vertical-wrap-->
                   </div><!--/.table-->
                 </div></a><!--/.col-xs-12.col-sm-->
-                <div class="col-xs-12 cat-techlinks">
-                  <p><span class="link-title">Technology Used:</span> <a href="#">MapInfo Professional 12.5</a> <span class="blue-box"><a href="#">Download Free Trial</a></span> <a href="#" class="read-more">. . .</a></p>
+                <div class="col-xs-12 cat-techlinks promo">
+                  <span class="link-title">Technology Used:</span> <div class="links"><a href="#">MapInfo Professional 12.5</a> <span class="blue-box"><a href="#">Download Free Trial</a></span> <a href="#" class="read-more">. . .</a></div>
                 </div><!--/.cat-techlinks-->
                 <a href="#"><div class="col-sm-6 bg col-xs-12 vert">
                   <div class="table">
@@ -224,7 +224,7 @@
                   </div><!--/.vertical-wrap-->
                 </div></a><!--/.table-->
                 <div class="col-xs-12 cat-techlinks">
-                  <p class=""><span class="link-title">Technology Used:</span> <a href="#">Doc1<sup>&reg;</sup> document creation</a> <a href="#">e-Messaging Solution</a> <a href="#">Document Dialog</a></p>
+                  <span class="link-title">Technology Used:</span> <div class="links"><a href="#">Doc1<sup>&reg;</sup> document creation</a> <a href="#">e-Messaging Solution</a> <a href="#">Document Dialog</a></div>
                 </div><!--/.cat-techlinks-->
               </div><!--/.module-->
             </div><!--/.row-->
@@ -246,7 +246,12 @@
                   </div><!--/.table-->
                 </div></a><!--/.col-xs-12.col-sm-->
                 <div class="col-xs-12 cat-techlinks">
-                  <p><span class="link-title">Technology Used:</span> <a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#" class="read-more">. . .</a></p>
+                  <span class="link-title">Technology Used:</span>
+                  <div class="links">
+                    <a href="#">MapInfo Professional</a>
+                    <a href="#">MapInfo Drivetime</a>
+                    <a href="#" class="read-more">. . .</a>
+                  </div>
                 </div><!--/.cat-techlinks-->
                 <a href="#"><div class="col-sm-6 bg col-xs-12 vert">
                   <div class="table">
