--- a/app/content/story-1-content.html
+++ b/app/content/story-1-content.html
@@ -94,6 +94,7 @@
 
 
 <!-- build:js({app,.tmp}) scripts/main-category.js -->
+<script src="../scripts/pb.namespace.js"></script>
 <script src="../scripts/pb.main.js"></script>
 <script src="../scripts/pb.model.js"></script>
 <script src="../scripts/pb.menu.js"></script>
