updated category tech links with different mobile styles (promo vs non-promo)

--- a/app/category-all.html
+++ b/app/category-all.html
@@ -315,7 +315,7 @@
                     </div><!--/.vertical-wrap-->
                   </div></a><!--/.table-->
                   <div class="col-xs-12 cat-techlinks">
-                    <p><span class="link-title">Technology Used:</span> <a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#" class="read-more">. . .</a></p>
+                    <span class="link-title">Technology Used:</span> <div class="links"><a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#" class="read-more">. . .</a></div>
                   </div><!--/.cat-techlinks-->
                 </div><!--/.module.col2-->
                 <a href="#"><div class="module col2 darkbg right bgexample2">
@@ -388,7 +388,7 @@
                       </div><!--/.vertical-wrap-->
                     </div></a><!--/.table-->
                     <div class="col-xs-12 cat-techlinks">
-                      <p class=""><span class="link-title">Technology Used:</span> <a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#" class="read-more">. . .</a></p>
+                      <span class="link-title">Technology Used:</span> <div class="links"><a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#" class="read-more">. . .</a></div>
                     </div><!--/.cat-techlinks-->
                 </div><!--/.module.col2-->
 
