added updated menu overlay and header code to category pages

--- a/app/category.html
+++ b/app/category.html
@@ -45,13 +45,15 @@
             </div>
             <nav class="col-xs-6">
               <ul>
-                <li><a href="#" class="icn-menu"></a><li>
                 <li><a href="#" class="icn-search"></a></li>
                 <li><a href="#" class="text-link hidden-xs">Shop</a></li>
                 <li><a href="#" class="text-link hidden-xs">My Account</a></li>
               </ul>
             </nav>
           </div><!--/.row-fluid-->
+          <a href="#" class="icn-menu">
+            <div class="patty"></div>
+          </a>
         </div><!--/.container-fluid-->
       </header>
       <div class="main-content">
@@ -233,21 +235,6 @@
         </div><!--.container-fluid-->
       </footer>
       <div class="menu-overlay animated">
-  <div class="fixed-top">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="logo col-sm-4 col-xs-6">
-          <a href="index.html">
-            <img src="images/pitneybowes-logo.png" alt="pitney bowes logo" class="hidden-xs"/>
-            <img src="images/sprite-mobile/pitneybowes-logo2x.png" alt="pitney bowes logo" class="visible-xs logo-mobile"/>
-          </a>
-        </div>
-        <div class="col-xs-2 col-sm-8 pull-right">
-          <a href="#" class="close close-menu pull-right"></a>
-        </div>
-      </div>
-    </div>
-  </div><!--/.fixed-top-->
   <div class="table">
     <div class="vertical-wrap">
       <div class="container-fluid">
