--- a/app/long-form-content.html
+++ b/app/long-form-content.html
@@ -46,15 +46,17 @@
             </div>
             <nav class="col-xs-6">
               <ul>
-                <li><a href="#" class="icn-menu"></a><li>
                 <li><a href="#" class="icn-search"></a></li>
                 <li><a href="#" class="text-link hidden-xs">Shop</a></li>
                 <li><a href="#" class="text-link hidden-xs">My Account</a></li>
               </ul>
             </nav>
           </div><!--/.row-fluid-->
+          <a href="#" class="icn-menu">
+            <div class="patty"></div>
+          </a>
         </div><!--/.container-fluid-->
-      </header> <!-- end what will be dynamic header -->
+      </header>
 
       <div class="main-content">
         <div class="hero-wrapper darkbg">
