--- a/app/category-all.html
+++ b/app/category-all.html
@@ -211,21 +211,26 @@
           <div class="container-fluid">
             <div class="row">
               <div class="module col1-fullbg darkbg">
-                <div class="col-xs-12 type-cat border pos">
-                  <a href="#case-study">case study</a>
-                  <a href="#finance" class="last">finance</a>
+                <div class="video-container video-full hide" data-video-id="txqiwrbYGrs">
+                  <div id=""></div>
                 </div>
-                <a href="#"><div class="table">
-                  <div class="vertical-wrap">
-                    <img src="images/sprite/icn-play-circle.png" class="video-play" />
-                    <div class="col-sm-8 col-xs-11">
-                      <p><i>8 Bank J. Van Breda</i> gets digital messaging, goes paperless and implements electronic signatures</p>
-                    </div>
-                  </div><!--/.vertical-wrap-->
-                </div></a><!--/.table-->
-                <div class="col-xs-12 cat-techlinks">
-                  <span class="link-title">Technology Used:</span> <div class="links"><a href="#">Doc1<sup>&reg;</sup> document creation</a> <a href="#">e-Messaging Solution</a> <a href="#">Document Dialog</a></div>
-                </div><!--/.cat-techlinks-->
+                <span class="hidden-video-content">
+                  <div class="col-xs-12 type-cat border pos">
+                    <a href="#case-study">case study</a>
+                    <a href="#finance" class="last">finance</a>
+                  </div>
+                  <a class="play-button-container" href="#"><div class="table">
+                    <div class="vertical-wrap">
+                      <img src="images/sprite/icn-play-circle.png" class="video-play" />
+                      <div class="col-sm-8 col-xs-11">
+                        <p><i>8 Bank J. Van Breda</i> gets digital messaging, goes paperless and implements electronic signatures</p>
+                      </div>
+                    </div><!--/.vertical-wrap-->
+                  </div></a><!--/.table-->
+                  <div class="col-xs-12 cat-techlinks">
+                    <span class="link-title">Technology Used:</span> <div class="links"><a href="#">Doc1<sup>&reg;</sup> document creation</a> <a href="#">e-Messaging Solution</a> <a href="#">Document Dialog</a></div>
+                  </div><!--/.cat-techlinks-->
+              </span>
               </div><!--/.module-->
             </div><!--/.row-->
           </div><!--/.container-fluid-->
@@ -253,13 +258,18 @@
                     <a href="#" class="read-more">. . .</a>
                   </div>
                 </div><!--/.cat-techlinks-->
-                <a href="#"><div class="col-sm-6 bg col-xs-12 vert">
-                  <div class="table">
-                    <div class="vertical-wrap">
-                      <img src="images/sprite/icn-play-circle.png" class="video-play" />
-                    </div><!--/.vertical-wrap-->
-                  </div><!--/.table-->
-                </div></a><!--/.col-xs-12.col-sm-6-->
+                <div class="video-container video-half hide col-sm-6 bg col-xs-12 vert" data-video-id="M7lc1UVf-VE">
+                  <div id=""></div>
+                </div>
+                <span class="hidden-video-content">
+                  <a class="play-button-container" href="#"><div class="col-sm-6 bg col-xs-12 vert">
+                    <div class="table">
+                      <div class="vertical-wrap">
+                        <img src="images/sprite/icn-play-circle.png" class="video-play" />
+                      </div><!--/.vertical-wrap-->
+                    </div><!--/.table-->
+                  </div></a><!--/.col-xs-12.col-sm-6-->
+                </span>
               </div><!--/.module-->
             </div><!--/.row-->
           </div><!--/.container-fluid-->
@@ -551,6 +561,8 @@
         <script src="scripts/pb.menu.js"></script>
         <script src="scripts/pb.header.js"></script>
         <script src="scripts/pb.category.js"></script>
+        <script src="scripts/pb.video.js"></script>
+
         <!-- endbuild -->
 
 </body>
