--- a/app/long-form-content.html
+++ b/app/long-form-content.html
@@ -86,6 +86,11 @@
         <div class="top-benefits container-fluid">
           <div class="row">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1">
+              <p class="col-sm-8 col-sm-offset-2">Peugeot used data from millions of  real world car trips to calculate average journey time undertaken by users of  TomTom 7 days a week between 7 am and 7 pm</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-xs-12 col-sm-10 col-sm-offset-1">
               <div class="benefit col-sm-4 col-xs-12">
                 <h3>Client Profile</h3>
                 <p>UK branch of French car company</p>
@@ -110,8 +115,7 @@
         <div class="tech-used container-fluid">
           <div class="row">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-              <div class="title-bg-detail"><h2>Technoloy Used</h2></div>
-              <p class="col-sm-8 col-sm-offset-2">Peugeot used data from millions of  real world car trips to calculate average journey time undertaken by users of  TomTom 7 days a week between 7 am and 7 pm</p>
+              <div class="title-bg-detail"><h2>Technology Used</h2></div>
             </div>
           </div>
           <div class="row">
