--- a/app/long-form-content.html
+++ b/app/long-form-content.html
@@ -19,7 +19,7 @@
         <!-- bower:css -->
         <!-- endbower -->
         <!-- endbuild -->
-        <!-- build:css(.tmp) styles/main.css -->
+        <!-- build:css(.tmp) styles/main-long.css -->
         <link rel="stylesheet" href="styles/main.css">
         <link rel="stylesheet" href="styles/category.css">
         <link rel="stylesheet" href="styles/content.css">
@@ -222,7 +222,7 @@
         </div><!-- more-section -->
       </div><!-- main-content -->
 
-      <!-- build:js scripts/vendor.js -->
+      <!-- build:js scripts/vendor-long.js -->
       <script src="scripts/vendors/jquery/jquery-1.11.1.min.js"></script>
       <script src="scripts/vendors/jquery/jquery-ui.min.js"></script>
       <script src="scripts/vendors/modernizr.prod.min.js"></script>
@@ -230,7 +230,7 @@
       <script src='scripts/vendors/greensock/TweenMax.min.js'></script>
       <!-- endbuild -->
 
-      <!-- build:js({app,.tmp}) scripts/main.js -->
+      <!-- build:js({app,.tmp}) scripts/main-long.js -->
       <script src="scripts/pb.namespace.js"></script>
       <script src="scripts/pb.main.js"></script>
       <script src="scripts/pb.menu.js"></script>
