--- a/app/category-all.html
+++ b/app/category-all.html
@@ -417,7 +417,7 @@
       <footer>
         <div class="container-fluid">
           <div class="row">
-            <div class="col-sm-2 col-xs-12 col-sm-offset-1 link-group">
+            <div class="col-sm-2 col-xs-12 col-sm-offset-1">
               <h2>About Pitney Bowes</h2>
               <ul>
                 <li><a href="#">Our company</a></li>
@@ -427,7 +427,7 @@
                 <li><a href="#">Software Partners</a></li>
               </ul>
             </div>
-            <div class="col-sm-2 col-xs-12 link-group">
+            <div class="col-sm-2 col-xs-12">
               <h2>Buy</h2>
               <ul>
                 <li><a href="#">Postage Meters</a></li>
