--- a/app/long-form-content.html
+++ b/app/long-form-content.html
@@ -225,7 +225,61 @@
           </div>
         </div><!-- more-section -->
       </div><!-- main-content -->
-
+      <footer>
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-sm-2 col-xs-12 col-sm-offset-1">
+              <h2>About Pitney Bowes</h2>
+              <ul>
+                <li><a href="#">Our company</a></li>
+                <li><a href="#">Newsroom</a></li>
+                <li><a href="#">Investor Relations</a></li>
+                <li><a href="#">Careers</a></li>
+                <li><a href="#">Software Partners</a></li>
+              </ul>
+            </div>
+            <div class="col-sm-2 col-xs-12">
+              <h2>Buy</h2>
+              <ul>
+                <li><a href="#">Postage Meters</a></li>
+                <li><a href="#">Postage Meter Ink</a></li>
+                <li><a href="#">Mailing Supplies</a></li>
+              </ul>
+            </div>
+            <div class="col-sm-2 col-xs-12">
+              <h2>Customer Service</h2>
+              <ul>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Product Support</a></li>
+                <li><a href="#">Software Support</a></li>
+                <li><a href="#">Postal Rate Change</a></li>
+                <li><a href="#">My Account</a></li>
+              </ul>
+            </div>
+            <div class="col-sm-2 col-xs-12">
+              <h2>Corporate</h2>
+              <ul>
+                <li><a href="#">Sitemap</a></li>
+                <li><a href="#">Privacy Statement</a></li>
+                <li><a href="#">Legal</a></li>
+                <li><a href="#">Compliance Information</a></li>
+              </ul>
+            </div>
+            <div class="col-sm-2 col-xs-12 social">
+              <h2>Follow Us</h2>
+              <a href="#"><img src="images/sprite/icon-facebook-dark.png" /></a>
+              <a href="#"><img src="images/sprite/icon-twitter-dark.png" /></a>
+              <a href="#"><img src="images/sprite/icon-linkedin-dark.png" /></a>
+              <a href="#"><img src="images/sprite/icon-email-dark.png" /></a>
+            </div>
+          </div><!--/.row-->
+          <div class="row">
+            <div class="bottom-text col-xs-12 col-sm-offset-1 col-sm-11">
+              <p>&copy;2014 Pitney Bowes Inc. All rights reserved.</p>
+            </div><!--/.bottom-links-->
+          </div><!--/.row-->
+        </div><!--.container-fluid-->
+      </footer>
       <!-- build:js scripts/vendor-long.js -->
       <script src="scripts/vendors/jquery/jquery-1.11.1.min.js"></script>
       <script src="scripts/vendors/jquery/jquery-ui.min.js"></script>
