mobile social icons (high res)

--- a/app/category.html
+++ b/app/category.html
@@ -226,10 +226,10 @@
             </div>
             <div class="col-sm-2 col-xs-12 social">
               <h2>Follow Us</h2>
-              <a href="#"><img src="images/sprite/icon-facebook-dark.png" /></a>
-              <a href="#"><img src="images/sprite/icon-twitter-dark.png" /></a>
-              <a href="#"><img src="images/sprite/icon-linkedin-dark.png" /></a>
-              <a href="#"><img src="images/sprite/icon-email-dark.png" /></a>
+              <a href="#" class="icn-fb-dark"></a>
+              <a href="#" class="icn-tw-dark"></a>
+              <a href="#" class="icn-in-dark"></a>
+              <a href="#" class="icn-yt-dark"></a>
             </div>
           </div><!--/.row-->
           <div class="row">
