--- a/app/category.html
+++ b/app/category.html
@@ -69,7 +69,7 @@
         </div><!--.hero-wrapper-->
 
         <div class="category-content">
-          <div class="container-fluid">
+          <div class="container-fluid tabs-container">
             <div class="row tabs">
                 <h2 class="col-xs-6 tab active"><a href="#">Ideas &amp; Insights</a></h2>
                 <h2 class="col-xs-6 tab"><a href="#">Find Products</a></h2>
